# CV-Maker2

./: .env.example  .gitignore  CV_Agent_Code_Walkthrough.md  RAG_SETUP_GUIDE.md  README.md  Test_User_CV.yaml  __init__.py  agent.py  cl_generator.py  config.py  cover_letter_generator.py  cv_config.yaml  cv_generator.py  job_extractor.py  langgraph_agent.py  main.py  pyproject.toml  rag_system.py  setup.py  test_basic.py  translation.py  utils.py
rendercv_output/: Your_Name_CV.typ
templates/: cl.yaml  cv.yaml
tools/rendercv/: README.md
tools/rendercv/rendercv_output/: Test_User_CV.html  Test_User_CV.md  Test_User_CV.typ
